--- a/index.html
+++ b/index.html
@@ -26,15 +26,7 @@
     <meta name="env-enable-debug-logging" content="">
     <meta name="env-enable-development-tools" content="">
     
-    <!-- Runtime Configuration Script -->
-    <script type="application/json" data-config>
-    {
-        "BACKEND_API_URL": "",
-        "NODE_ENV": "",
-        "ENABLE_DEBUG_LOGGING": "",
-        "ENABLE_DEVELOPMENT_TOOLS": ""
-    }
-    </script>
+    <!-- Runtime Configuration Script (injected at build time) -->
 </head>
 <body>
     <header class="header">
