--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
     <meta name="env-backend-api-url" content="https://hereco-backend.azurewebsites.net">
     <meta name="env-node-env" content="production">
     <meta name="env-debug-mode" content="false">
-    <meta name="env-dev-tools" content="false">
-    <meta name="env-cors-debug" content="false">
-    <meta name="env-cors-origins" content="">
-    <meta name="env-azure-web-app-name" content="your-app-name">
+    <meta name="env-dev-tools" content="true">
+    <meta name="env-cors-debug" content="true">
+    <meta name="env-cors-origins" content="http://localhost:8080">
+    <meta name="env-azure-web-app-name" content="hereco-backend">
     <meta name="env-azure-region" content="eastus">
     <meta name="env-local-backend-url" content="http://localhost:3000">
     <meta name="env-local-dev-mode" content="false">
@@ -200,7 +200,6 @@
 
     <!-- Application Scripts -->
     <script src="js/simple-env.js"></script>
-    <script src="js/env.js"></script>
     <script src="js/config.js"></script>
     <script src="js/apiService.js"></script>
     <script src="js/main.js"></script>
