--- a/index.html
+++ b/index.html
@@ -21,21 +21,21 @@
     <link rel="stylesheet" href="styles/main.css">
     
     <!-- Environment Configuration Meta Tags -->
-    <meta name="env-backend-api-url" content="https://hereco-backend.azurewebsites.net">
-    <meta name="env-node-env" content="production">
-    <meta name="env-debug-mode" content="false">
-    <meta name="env-dev-tools" content="true">
-    <meta name="env-cors-debug" content="true">
-    <meta name="env-cors-origins" content="http://localhost:8080">
-    <meta name="env-azure-web-app-name" content="hereco-backend">
-    <meta name="env-azure-region" content="eastus">
-    <meta name="env-local-backend-url" content="http://localhost:3000">
-    <meta name="env-local-dev-mode" content="false">
-    <meta name="env-api-timeout" content="10000">
-    <meta name="env-enable-caching" content="true">
-    <meta name="env-enable-lazy-loading" content="true">
-    <meta name="env-show-detailed-errors" content="false">
-    <meta name="env-enable-error-reporting" content="true">
+    <meta name="env-backend-api-url" content="%BACKEND_API_URL%">
+    <meta name="env-node-env" content="%NODE_ENV%">
+    <meta name="env-debug-mode" content="%DEBUG_MODE%">
+    <meta name="env-dev-tools" content="%DEV_TOOLS%">
+    <meta name="env-cors-debug" content="%CORS_DEBUG%">
+    <meta name="env-cors-origins" content="%CORS_ORIGINS%">
+    <meta name="env-azure-web-app-name" content="%AZURE_WEB_APP_NAME%">
+    <meta name="env-azure-region" content="%AZURE_REGION%">
+    <meta name="env-local-backend-url" content="%LOCAL_BACKEND_URL%">
+    <meta name="env-local-dev-mode" content="%LOCAL_DEV_MODE%">
+    <meta name="env-api-timeout" content="%API_TIMEOUT%">
+    <meta name="env-enable-caching" content="%ENABLE_CACHING%">
+    <meta name="env-enable-lazy-loading" content="%ENABLE_LAZY_LOADING%">
+    <meta name="env-show-detailed-errors" content="%SHOW_DETAILED_ERRORS%">
+    <meta name="env-enable-error-reporting" content="%ENABLE_ERROR_REPORTING%">
 </head>
 <body>
     <header class="header">
