--- a/privacy.html
+++ b/privacy.html
@@ -186,6 +186,7 @@
                         <a href="index.html#gallery" class="footer-link">Gallery</a>
                         <a href="about.html" class="footer-link">About</a>
                         <a href="contact.html" class="footer-link">Contact</a>
+                        <a href="https://stewie.hereco.xyz" class="footer-link" target="_blank" rel="noopener noreferrer">Stewie</a>
                     </div>
                 </div>
             </div>
