AI Chatbot dir fixed

--- a/index.html
+++ b/index.html
@@ -146,6 +146,9 @@
                         <li class="nav-item">
                             <a href="contact.html" class="nav-link">Contact</a>
                         </li>
+                        <li class="nav-item">
+                            <a href="chatbot.html" class="nav-link">AI Chat</a>
+                        </li>
                         <li class="nav-item auth-links">
                             <a href="login.html" class="nav-link">Login</a>
                         </li>
