Update URL system to use query parameters matching site format

--- a/chatbot.html
+++ b/chatbot.html
@@ -111,7 +111,7 @@
                             <a href="contact.html" class="nav-link">Contact</a>
                         </li>
                         <li class="nav-item">
-                            <a href="chatbot.html" class="nav-link active">AI Chat</a>
+                            <a href="/c" class="nav-link active">AI Chat</a>
                         </li>
                         <li class="nav-item auth-links">
                             <a href="login.html" class="nav-link">Login</a>
