added downlaod page

--- a/chatbot.html
+++ b/chatbot.html
@@ -113,6 +113,9 @@
                         <li class="nav-item">
                             <a href="/c" class="nav-link active">AI Chat</a>
                         </li>
+                        <li class="nav-item">
+                            <a href="download.html" class="nav-link">Download</a>
+                        </li>
                         <li class="nav-item auth-links">
                             <a href="login.html" class="nav-link">Login</a>
                         </li>
@@ -127,6 +130,18 @@
 
     <!-- Chatbot Section -->
     <main class="main chatbot-main" role="main">
+        <!-- Mobile App Promotion (Mobile Only) -->
+        <div class="mobile-app-promo">
+            <div class="promo-content">
+                <div class="promo-icon">📱</div>
+                <div class="promo-text">
+                    <h3>Loving Stewie? Check out our mobile app!</h3>
+                    <p>Get the full experience with our Android app</p>
+                </div>
+                <a href="download.html" class="promo-button">Download App</a>
+            </div>
+        </div>
+        
         <div class="chatbot-layout">
             <!-- Sidebar -->
             <div class="chatbot-sidebar">
@@ -288,6 +303,19 @@
             </div>
         </div>
     </main>
+
+    <!-- Mobile Message Promotional Banner -->
+    <div id="mobile-message-promo" class="mobile-message-promo">
+        <div class="message-promo-content">
+            <div class="promo-icon">📱</div>
+            <div class="promo-text">
+                <h3>Loving the chat experience?</h3>
+                <p>Get our mobile app for the best experience!</p>
+            </div>
+            <a href="download.html" class="promo-button">Download App</a>
+            <button id="close-message-promo" class="promo-close" aria-label="Close">×</button>
+        </div>
+    </div>
 
     <!-- Mobile Sidebar Overlay -->
     <div id="mobile-sidebar-overlay" class="mobile-sidebar-overlay"></div>
