--- a/privacy.html
+++ b/privacy.html
@@ -61,6 +61,9 @@
                         <li class="nav-item">
                             <a href="contact.html" class="nav-link">Contact</a>
                         </li>
+                        <li class="nav-item">
+                            <a href="download.html" class="nav-link">Download</a>
+                        </li>
                         <li class="nav-item auth-links">
                             <a href="login.html" class="nav-link">Login</a>
                         </li>
@@ -214,6 +217,7 @@
                         <a href="index.html#gallery" class="footer-link">Gallery</a>
                         <a href="about.html" class="footer-link">About</a>
                         <a href="contact.html" class="footer-link">Contact</a>
+                        <a href="download.html" class="footer-link">Download</a>
                         <a href="https://stewie.hereco.xyz" class="footer-link" target="_blank" rel="noopener noreferrer">Stewie</a>
                     </div>
                 </div>
