--- a/chatbot.html
+++ b/chatbot.html
@@ -106,27 +106,10 @@
             <!-- Sidebar -->
             <div class="chatbot-sidebar">
                 <div class="sidebar-header">
-                    <div class="sidebar-header-top">
-                        <button id="dataset-btn" class="dataset-btn" title="Upload Dataset">
-                            <svg class="btn-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                                <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
-                                <polyline points="14,2 14,8 20,8"></polyline>
-                                <line x1="16" y1="13" x2="8" y2="13"></line>
-                                <line x1="16" y1="17" x2="8" y2="17"></line>
-                                <polyline points="10,9 9,9 8,9"></polyline>
-                            </svg>
-                        </button>
-                        <button id="new-chat-btn-small" class="new-chat-btn-small" title="New chat">
-                            <svg class="btn-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                                <path d="M12 5v14M5 12h14"></path>
-                            </svg>
-                        </button>
-                    </div>
-                    <button id="new-chat-btn" class="new-chat-btn">
+                    <button id="new-chat-btn-small" class="new-chat-btn-small" title="New chat">
                         <svg class="btn-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                             <path d="M12 5v14M5 12h14"></path>
                         </svg>
-                        New chat
                     </button>
                 </div>
                 
@@ -153,13 +136,6 @@
                         <span class="hamburger-line"></span>
                     </button>
                     <h1 class="mobile-chat-title">AI Assistant</h1>
-                    <div class="mobile-actions">
-                        <button id="mobile-new-chat" class="mobile-action-btn" title="New chat">
-                            <svg class="btn-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                                <path d="M12 5v14M5 12h14"></path>
-                            </svg>
-                        </button>
-                    </div>
                 </div>
 
                 <!-- Top Bar (Desktop Only) -->
@@ -167,29 +143,6 @@
                     <div class="topbar-left">
                         <h1 class="chat-title">AI Assistant</h1>
                     </div>
-                  <div class="topbar-actions">
-                      <button id="clear-chat-btn" class="topbar-btn" title="Clear current chat">
-                          <svg class="btn-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                              <path d="M3 6h18M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"></path>
-                              <line x1="10" y1="11" x2="10" y2="17"></line>
-                              <line x1="14" y1="11" x2="14" y2="17"></line>
-                          </svg>
-                      </button>
-                      <button id="share-chat-btn" class="topbar-btn" title="Share chat">
-                          <svg class="btn-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                              <path d="M4 12v8a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2v-8"></path>
-                              <polyline points="16,6 12,2 8,6"></polyline>
-                              <line x1="12" y1="2" x2="12" y2="15"></line>
-                          </svg>
-                      </button>
-                      <button id="menu-btn" class="topbar-btn" title="Menu">
-                          <svg class="btn-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                              <circle cx="12" cy="12" r="1"></circle>
-                              <circle cx="19" cy="12" r="1"></circle>
-                              <circle cx="5" cy="12" r="1"></circle>
-                          </svg>
-                      </button>
-                  </div>
                 </div>
 
                 <!-- Chat Container -->
@@ -291,7 +244,7 @@
             </button>
         </div>
         <div class="mobile-sidebar-content">
-            <button id="mobile-new-chat-btn" class="new-chat-btn">
+            <button id="mobile-new-chat-btn-small" class="new-chat-btn" title="New chat">
                 <svg class="btn-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                     <path d="M12 5v14M5 12h14"></path>
                 </svg>
