updated chabot page

--- a/chatbot.html
+++ b/chatbot.html
@@ -17,7 +17,7 @@
     <!-- Preload Critical Resources -->
     <link rel="preload" href="styles/main.css" as="style">
     <link rel="preload" href="js/main.js" as="script">
-    <link rel="preload" href="js/chatbot.js" as="script">
+    <link rel="preload" href="js/chatbot.js?v=2.0" as="script">
     
     <!-- DNS Prefetch for External Resources -->
     <link rel="dns-prefetch" href="//fonts.googleapis.com">
@@ -320,9 +320,9 @@
 
     <!-- Application Scripts -->
     <script src="js/simple-env.js"></script>
-    <script src="js/config.js"></script>
+    <script src="js/config.js?v=2.0"></script>
     <script src="js/apiService.js"></script>
-    <script src="js/chatbot.js"></script>
+    <script src="js/chatbot.js?v=2.0"></script>
     <script src="js/auth.js"></script>
 </body>
 </html>
