--- a/download.html
+++ b/download.html
@@ -425,7 +425,7 @@
                                 <p>Version 1.0.0 | 51.2 MB</p>
                             </div>
                         </div>
-                        <a href="https://shntanuuherebucket1.blob.core.windows.net/apk/Stewiev1.apk" class="download-button" download="HerecoChatbot.apk">
+                        <a href="https://media.hereco.xyz/apk/Stewiev1.apk" class="download-button" download="HerecoChatbot.apk">
                             <span>Download</span>
                             <span>↓</span>
                         </a>
