--- a/signup.html
+++ b/signup.html
@@ -47,8 +47,8 @@
     <!-- Background Video -->
     <div class="video-background">
         <video autoplay muted loop playsinline>
-            <source src="https://shntanuuherebucket1.blob.core.windows.net/files/TVA.mov" type="video/quicktime">
-            <source src="https://shntanuuherebucket1.blob.core.windows.net/files/TVA.mov" type="video/mp4">
+            <source src="https://media.hereco.xyz/files/TVA.mov" type="video/quicktime">
+            <source src="https://media.hereco.xyz/files/TVA.mov" type="video/mp4">
             <!-- Fallback image if video doesn't load -->
         </video>
         <div class="video-overlay"></div>
